#ifndef FSLSIMPLEUI_CONTROLS_CHARTS_DATA_ICHARTCOMPLEXDATAWINDOW_HPP
#define FSLSIMPLEUI_CONTROLS_CHARTS_DATA_ICHARTCOMPLEXDATAWINDOW_HPP
/****************************************************************************************************************************************************
 * Copyright 2021 NXP
 * All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
 *
 *    * Redistributions of source code must retain the above copyright notice,
 *      this list of conditions and the following disclaimer.
 *
 *    * Redistributions in binary form must reproduce the above copyright notice,
 *      this list of conditions and the following disclaimer in the documentation
 *      and/or other materials provided with the distribution.
 *
 *    * Neither the name of the NXP. nor the names of
 *      its contributors may be used to endorse or promote products derived from
 *      this software without specific prior written permission.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
 * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
 * WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
 * IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT,
 * INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
 * BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
 * LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE
 * OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
 * ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 *
 ****************************************************************************************************************************************************/

#include <FslBase/BasicTypes.hpp>
#include <FslBase/Span/ReadOnlySpan.hpp>
#include <FslSimpleUI/Controls/Charts/Data/IChartDataGridLines.hpp>
#include <FslSimpleUI/Controls/Charts/Data/ChartComplexDataInfo.hpp>
#include <FslSimpleUI/Controls/Charts/Data/ChartComplexDataEntry.hpp>

namespace Fsl
{
  namespace UI
  {
    class IChartComplexDataWindow : public IChartDataGridLines
    {
    public:
      virtual void SetWindowMaxSize(const uint32_t desiredNewCapacity) = 0;
      virtual ChartComplexDataInfo DataInfo() const = 0;
      virtual ReadOnlySpan<ChartComplexDataEntry> DataAsReadOnlySpan(const uint32_t segmentIndex) const = 0;
    };
  }
}


#endif
