#ifndef FSLSIMPLEUI_CONTROLS_CHARTS_DATA_ICHARTDATAGRIDLINES_HPP
#define FSLSIMPLEUI_CONTROLS_CHARTS_DATA_ICHARTDATAGRIDLINES_HPP
/****************************************************************************************************************************************************
 * Copyright 2021 NXP
 * All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
 *
 *    * Redistributions of source code must retain the above copyright notice,
 *      this list of conditions and the following disclaimer.
 *
 *    * Redistributions in binary form must reproduce the above copyright notice,
 *      this list of conditions and the following disclaimer in the documentation
 *      and/or other materials provided with the distribution.
 *
 *    * Neither the name of the NXP. nor the names of
 *      its contributors may be used to endorse or promote products derived from
 *      this software without specific prior written permission.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
 * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
 * WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
 * IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT,
 * INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
 * BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
 * LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE
 * OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
 * ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 *
 ****************************************************************************************************************************************************/

#include <FslBase/BasicTypes.hpp>
#include <FslBase/Span/ReadOnlySpan.hpp>
#include <FslBase/Math/MinMax.hpp>
#include <FslBase/String/StringViewLite.hpp>
#include <FslSimpleUI/Controls/Charts/Data/ChartGridInfo.hpp>
#include <FslSimpleUI/Controls/Charts/Data/ChartGridLineInfo.hpp>

namespace Fsl
{
  namespace UI
  {
    class IChartDataGridLines
    {
    public:
      //! @brief Get information about the data entries
      virtual ChartGridInfo GridInfo() const = 0;

      //! @brief Get a description string for the given data value
      virtual StringViewLite GetDescriptionString(const uint32_t value) = 0;

      //! @brief Get a sorted list of grid line suggestions for the given range. The returned span is sorted from min to max and contains no duplicate
      //! entries.
      virtual ReadOnlySpan<ChartGridLineInfo> GetSuggestedGridLines(const MinMax<uint32_t> minMax) const = 0;
    };
  }
}


#endif
